--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     <title>Snake Game</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="js/script.js" defer></script>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
     <div class="score">score: <span class="score--value">00</span></div>
@@ -22,5 +25,11 @@
         </button>
     </div>
     <canvas width="600" height="600"></canvas>
+    <div class="direcional">
+        <button class="up"><span class="material-symbols-outlined">arrow_upward</span></button>
+        <button class="left"><span class="material-symbols-outlined">arrow_back</span></button>
+        <button class="down"><span class="material-symbols-outlined">arrow_downward</span></button>
+        <button class="right"><span class="material-symbols-outlined">arrow_forward</span></button>
+    </div>
 </body>
 </html>
