--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
     </div>
     <canvas width="600" height="600"></canvas>
     <div class="direcional">
-        <div class="up"><span class="material-symbols-outlined">arrow_upward</span></div>
-        <div class="left"><span class="material-symbols-outlined">arrow_back</span></div>
-        <div class="down"><span class="material-symbols-outlined">arrow_downward</span></div>
-        <div class="right"><span class="material-symbols-outlined">arrow_forward</span></div>
+        <div class="up"></div>
+        <div class="left"></div>
+        <div class="down"></div>
+        <div class="right"></div>
     </div>
 </body>
 </html>
