--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
     </div>
     <canvas width="600" height="600"></canvas>
     <div class="direcional">
-        <div class="up"></div>
-        <div class="left"></div>
-        <div class="down"></div>
-        <div class="right"></div>
+        <div class="up">cima</div>
+        <div class="left">esq</div>
+        <div class="down">dir</div>
+        <div class="right">baixo</div>
     </div>
 </body>
 </html>
