--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
     </div>
     <canvas width="600" height="600"></canvas>
     <div class="direcional">
-        <div class="up"></div>
-        <div class="left"></div>
-        <div class="down"></div>
-        <div class="right"></div>
+        <button class="up"><span class="material-symbols-outlined">arrow_upward</span></button>
+        <button class="left"><span class="material-symbols-outlined">arrow_back</span></button>
+        <button class="down"><span class="material-symbols-outlined">arrow_downward</span></button>
+        <button class="right"><span class="material-symbols-outlined">arrow_forward</span></button>
     </div>
 </body>
 </html>
